// Extracted from 3.3 GIO
// By YYHEggEgg#6167

syntax = "proto3";

option csharp_namespace = "OldProtos";

import "AvatarInfo.proto";
import "AvatarRenameInfo.proto";
import "AvatarTeam.proto";

message AvatarDataNotify {
    repeated uint32 backup_avatar_team_order_list = 9;
    repeated uint64 temp_avatar_guid_list = 12;
    repeated AvatarInfo avatar_list = 6;
    uint32 cur_avatar_team_id = 2;
    repeated AvatarRenameInfo avatar_rename_list = 4;
    repeated uint32 owned_flycloak_list = 1;
    repeated uint32 owned_costume_list = 11;
    map<uint32, AvatarTeam> avatar_team_map = 7;
    uint64 choose_avatar_guid = 8;
    
    // enum CmdId {
    //     option allow_alias = true;
    //     NONE = 0;
    //     CMD_ID = 1633;
    //     ENET_CHANNEL_ID = 0;
    //     ENET_IS_RELIABLE = 1;
    // }
}
