// Extracted from 3.3 GIO
// By YYHEggEgg#6167

syntax = "proto3";

option java_package = "emu.grasscutter.net.oldproto";

import "StopServerInfo.proto";

message GetPlayerTokenRsp {
    uint32 minors_reg_min_age = 1561;
    uint32 channel_id = 896;
    uint32 platform_type = 8;
    string account_uid = 12;
    bool is_login_white_list = 573;
    bool is_guest = 4;
    uint32 black_uid_end_time = 14;
    bool is_watchdog_uid = 2028;
    string psn_id = 1811;
    uint32 tag = 1635;
    string country_code = 2013;
    string token = 11;
    uint32 sub_channel_id = 1802;
    bytes security_cmd_buffer = 6;
    string client_version_random_key = 1529;
    string birthday = 937;
    uint64 secret_key_seed = 13;
    uint32 account_type = 5;
    string msg = 7;
    repeated uint32 finish_collection_id_list = 1640;
    string sign = 1140;
    string secret_key = 15;
    StopServerInfo stop_server = 1382;
    int32 retcode = 2;
    uint32 uid = 1;
    bool is_proficient_player = 9;
    uint32 reg_platform = 1112;
    string server_rand_key = 1493;
    bytes extra_bin_data = 3;
    string client_ip_str = 860;
    uint32 gm_uid = 10;
    uint32 key_id = 1172;
    
    // enum CmdId {
    //     option allow_alias = true;
    //     NONE = 0;
    //     CMD_ID = 198;
    //     ENET_CHANNEL_ID = 0;
    //     ENET_IS_RELIABLE = 1;
    // }
}
