// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "BlockInfo.proto";
import "FeatureBlockInfo.proto";
import "ResVersionConfig.proto";
import "ShortAbilityHashPair.proto";

option csharp_namespace = "OldProtos";

// CmdId: 135
// EnetChannelId: 0
// EnetIsReliable: true
message PlayerLoginRsp {
  uint32 client_data_version = 1;
  bool is_sc_open = 1429;
  int32 retcode = 15;
  map<uint32, BlockInfo> block_info_map = 571;
  bool is_audit = 1685;
  bool is_transfer = 2018;
  string client_silence_md5 = 1746;
  ResVersionConfig next_res_version_config = 1573;
  uint32 client_silence_data_version = 6;
  uint64 login_rand = 4;
  bool is_new_player = 8;
  string client_version_suffix = 1047;
  string game_biz = 5;
  string next_resource_url = 621;
  bool is_relogin = 10;
  double total_tick_time = 125;
  bool is_enable_client_hash_debug = 932;
  bytes sc_info = 2024;
  int32 ability_hash_code = 12;
  string register_cps = 2040;
  bool is_login_rsp_split = 1649;
  bool is_use_ability_hash = 2;
  map<string, int32> ability_hash_map = 11;
  repeated ShortAbilityHashPair short_ability_hash_map = 250;
  string client_md5 = 1830;
  string country_code = 1900;
  bool is_data_need_relogin = 951;
  ResVersionConfig res_version_config = 1969;
  repeated FeatureBlockInfo feature_block_info_list = 1352;
  string birthday = 624;
  uint32 target_uid = 14;
  bytes player_data = 13;
  string client_silence_version_suffix = 1299;
  uint32 target_home_owner_uid = 553;
  uint32 player_data_version = 7;
}
